Update portfolio with all projects and live demo links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="TemplateMo">
 
-        <title>First Portfolio Bootstrap 5 Theme</title>
+        <title>yusra's portfolio</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,7 +48,7 @@ https://templatemo.com/tm-578-first-portfolio
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">First</a>
+                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">Portfolio</a>
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
@@ -221,39 +221,6 @@ https://templatemo.com/tm-578-first-portfolio
             </section>
 
 
-            <!-- <section class="clients section-padding">
-                <div class="container">
-                    <div class="row align-items-center">
-
-                        <div class="col-lg-12 col-12">
-                            <h3 class="text-center mb-5">Companies I've had worked</h3>
-                        </div>
-
-                        <div class="col-lg-2 col-4 ms-auto clients-item-height">
-                            <img src="images/clients/cachet.svg" class="clients-image img-fluid" alt="">
-                        </div>
-
-                        <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/guitar-center.svg" class="clients-image img-fluid" alt="">
-                        </div>
-
-                        <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/tokico.svg" class="clients-image img-fluid" alt="">
-                        </div>
-
-                        <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/shopify.svg" class="clients-image img-fluid" alt="">
-                        </div>
-
-                        <div class="col-lg-2 col-4 me-auto clients-item-height">
-                            <img src="images/clients/profil-rejser.svg" class="clients-image img-fluid" alt="">
-                        </div>
-
-                    </div>
-                </div>
-            </section> -->
-
-
             <section class="services section-padding" id="section_3">
                 <div class="container">
                     <div class="row">
@@ -356,65 +323,120 @@ https://templatemo.com/tm-578-first-portfolio
             </section>
 
 
+            
             <section class="projects section-padding" id="section_4">
-                <div class="container">
-                    <div class="row">
+    <div class="container">
+        <div class="row">
 
-                        <div class="col-lg-8 col-md-8 col-12 ms-auto">
-                            <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
-                                <img src="images/white-desk-work-study-aesthetics.jpg" class="avatar-image img-fluid" alt="">
+            <div class="col-lg-8 col-md-8 col-12 ms-auto">
+                <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
+                    <img src="images/aerial-view-man-using-computer-laptop-wooden-table.jpg" class="avatar-image img-fluid" alt="">
 
-                                <h2 class="text-white ms-4 mb-0">Projects</h2>
-                            </div>
-                        </div>
-
-                        <div class="clearfix"></div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
-
-                                    <h3 class="projects-title"> <a href="https://amazon.yusrareshid.com/">Amazon Project</a></h3>
-                                </div>
-
-                                <a href="images/projects/nikhil-KO4io-eCAXA-unsplash.jpg" class="popup-image">
-                                    <img src="images/projects/nikhil-KO4io-eCAXA-unsplash.jpg" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
-
-                                    <h3 class="projects-title"> <a href="http://netflix.yusrareshid.com/">Netflix Project</a> </h3>
-                                </div>
-
-                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
-                                    <img src="images/projects/netflix.jpeg" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
-
-                                    <h3 class="projects-title"> <a href="https://amazon.yusrareshid.com/">Amazon Project</a> </h3>
-                                </div>
-
-                                <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
-                                    <img src="images/projects/amazon logo.jpeg" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                    </div>
+                    <h2 class="text-white ms-4 mb-0">Projects</h2>
                 </div>
-            </section>
+            </div>
+
+            <div class="clearfix"></div>
+
+            <!-- Project 1 -->
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="projects-thumb">
+                    <div class="projects-info">
+                        <small class="projects-tag">Website</small>
+
+                        <h3 class="projects-title">
+                            <a href="https://evangadi-forum.yusrareshid.com" target="_blank">Forum Project</a>
+                        </h3>
+
+                        <p><a href="https://github.com/faruk636/evangadi-forum-project.git" target="_blank">GitHub Repo</a></p>
+                    </div>
+
+                    <a href="https://evangadi-forum.yusrareshid.com" target="_blank">
+                        <img src="images/project-section/evangadi_forum.jpg" class="projects-image img-fluid" alt="">
+                    </a>
+                </div>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="projects-thumb">
+                    <div class="projects-info">
+                        <small class="projects-tag">Website</small>
+
+                        <h3 class="projects-title">
+                            <a href="https://ecommerce.yusrareshid.com/" target="_blank">Amazon Project</a>
+                        </h3>
+
+                        <p><a href="https://github.com/yusra-reshid/amazon-project.git" target="_blank">GitHub Repo</a></p>
+                    </div>
+
+                    <a href="https://ecommerce.yusrareshid.com/" target="_blank">
+                        <img src="images/project-section/amazon.jpg" class="projects-image img-fluid" alt="">
+                    </a>
+                </div>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="projects-thumb">
+                    <div class="projects-info">
+                        <small class="projects-tag">Website</small>
+
+                        <h3 class="projects-title">
+                            <a href="http://netflix.yusrareshid.com/" target="_blank">Netflix Project</a>
+                        </h3>
+
+                        <p><a href="https://github.com/yusra-reshid/Netflix-project.git" target="_blank">GitHub Repo</a></p>
+                    </div>
+
+                    <a href="http://netflix.yusrareshid.com/" target="_blank">
+                        <img src="images/project-section/netflix.jpg" class="projects-image img-fluid" alt="">
+                    </a>
+                </div>
+            </div>
+
+            <!-- Project 4 -->
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="projects-thumb">
+                    <div class="projects-info">
+                        <small class="projects-tag">Website</small>
+
+                        <h3 class="projects-title">
+                            <a href="https://applereact.yusrareshid.com/" target="_blank">Apple React Project</a>
+                        </h3>
+
+                        <p><a href="https://github.com/yusra-reshid/appleReact.git" target="_blank">GitHub Repo</a></p>
+                    </div>
+
+                    <a href="https://applereact.yusrareshid.com/" target="_blank">
+                        <img src="images/project-section/apple_react.jpg" class="projects-image img-fluid" alt="">
+                    </a>
+                </div>
+            </div>
+
+            <!-- Project 5 -->
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="projects-thumb">
+                    <div class="projects-info">
+                        <small class="projects-tag">Website</small>
+
+                        <h3 class="projects-title">
+                            <a href="http://apple-clone.yusrareshid.com/" target="_blank">Apple Bootstrap Project</a>
+                        </h3>
+
+                        <p><a href="https://github.com/devabdisa/appleClone.git" target="_blank">GitHub Repo</a></p>
+                    </div>
+
+                    <a href="http://apple-clone.yusrareshid.com/" target="_blank">
+                        <img src="images/project-section/apple_bootstrap.jpg" class="projects-image img-fluid" alt="">
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
 
             <section class="contact section-padding" id="section_5">
                     <div class="container">
@@ -447,13 +469,13 @@ https://templatemo.com/tm-578-first-portfolio
                                     <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
 
                                     <ul class="social-icon">
-                                        <li class="social-icon-item"><a href="https://twitter.com/minthu" class="social-icon-link bi-twitter"></a></li>
+                                        <li class="social-icon-item"><a href="https://x.com/_yuyuu___" class="social-icon-link bi-twitter"></a></li>
 
-                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.instagram.com/__yuyuu.__/" class="social-icon-link bi-instagram"></a></li>
 
-                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-pinterest"></a></li>
+                                        <!-- <li class="social-icon-item"><a href="#" class="social-icon-link bi-pinterest"></a></li>
 
-                                        <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li>
+                                        <li class="social-icon-item"><a href="" class="social-icon-link bi-youtube"></a></li> -->
                                     </ul>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Start a project</strong>
@@ -468,7 +490,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                     <p class="mb-2">
                                         Yusra is a professional web developer. Feel free to get in touch with me.
-                              </p>
+                                </p>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Email</strong>
 
@@ -581,7 +603,7 @@ https://templatemo.com/tm-578-first-portfolio
                     <div class="col-lg-12 col-12">
                         <div class="copyright-text-wrap">
                             <p class="mb-0">
-                                <span class="copyright-text">Copyright © 2036 <a href="#">First Portfolio</a> Company. All rights reserved.</span>
+                                <span class="copyright-text">Copyright © 2036 <a href="#">Portfolio</a> Company. All rights reserved.</span>
                                 Design: 
                                 <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a>
                             </p>
